--- a/css/style.css
+++ b/css/style.css
@@ -225,14 +225,14 @@ input {
 }
 
 .day {
-  margin: 0 0 0 5px;
+  margin: 0 0 0 10px;
   float: left;
   clear: both;
   font-size: 2em;
 }
 
 .month {
-  margin: 0 0 0 5px;
+  margin: 0 0 0 10px;
   float: left;
   clear: both;
 }
@@ -260,6 +260,7 @@ input {
   width: 100%;
   background-image: -webkit-gradient(linear, right bottom, left top, from(rgba(255, 0, 0, 0)), color-stop(rgba(255, 0, 0, 0.25)), to(rgba(255, 0, 0, 0.8)));
   background-image: linear-gradient(to top left, rgba(255, 0, 0, 0), rgba(255, 0, 0, 0.25), rgba(255, 0, 0, 0.8));
+  border-radius: 15px;
 }
 
 .inButton {
