--- a/css/style.sass
+++ b/css/style.sass
@@ -192,13 +192,13 @@ input
     grid-template-areas: "coming notComing"
 
 .day
-    margin: 0 0 0 5px
+    margin: 0 0 0 10px
     float: left
     clear: both
     font-size: 2em
     
 .month
-    margin: 0 0 0 5px
+    margin: 0 0 0 10px
     float: left
     clear: both
 
@@ -220,6 +220,7 @@ input
 .dayAndMonth
     width: 100%
     background-image: linear-gradient(to top left, rgba(255,0,0,0), rgba(255,0,0,0.25), rgba(255,0,0,0.8))
+    border-radius: 15px
 
 .inButton
     width: 46%
